--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>El rompecabezas de Proxmox VE</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="css/estilo.css" />
 </head>
 
 <body>
@@ -14,6 +14,8 @@
 		<img src="" alt="logoWP" height="42" width="42">
 		<h1 id="titulo-cabecero">El rompecabezas de Proxmox VE</h1>
 	</header>
+	<section id = "contenedor">
+		
 	<nav id="navegador">
 		<ul id="lista">
 			<li>
@@ -43,7 +45,9 @@
 			</li>
 		</ul>
 	</nav>
-	<section id="seccion"><iframe src="https://pve.proxmox.com/wiki/Main_Page" width="100%" height="100%"></iframe></section>
+	<article id="articulo"><iframe src="https://pve.proxmox.com/wiki/Main_Page" width="100%" height="100%"></iframe>
+	</article>
+	</section>
 	<footer id="pie">
 		<img src="" alt="logoWP" height="32" width="32">
 		<h3 id="titulo-pie">El rompecabezas de Proxmox VE - Asier, Victor, Vanesa y Jon Andoni.</h3>
