--- a/web/index.html
+++ b/web/index.html
@@ -1,36 +1,49 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Pagina de inicio</title>
-	<link rel="stylesheet" href="css/estilo.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>El rompecabezas de Proxmox VE</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 </head>
+
 <body>
-	<header id="header">
-	<p>cabecera</p>
-	</header><!-- /header -->
-	<section id="contenedor">
-		<aside id="navegacion">
-			<nav id="navegador">
-				<ul id="enlaces">
-					<li><a href="#">Pagina principal</a></li>
-					<li><a href="#">Instalación del Proxmox</a></li>
-					<li><a href="#">Instalación del contenedor</a></li>
-					<li><a href="#">Instalación de Apache</a></li>
-				</ul>
-				
-			</nav>
-		</aside>
-		<section id="contenido">
-			<article id="punto1">
-				<h1>Zona de contenido</h1>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam vel velit dolore quis esse culpa, aliquid aut atque, unde numquam repellat hic nesciunt, illo vitae ducimus. Minima rerum, sint quae!
-			</article>
-		</section>
-	</section>
-	<footer>
-	<h1>Footer</h1> <p>Jon, Asier, Víctor <br> Segundo de desarrollo web</p>
-	</footer>
+    <header>
+        <img src="" alt="logoWP" height="42" width="42">
+        <h1>El rompecabezas de Proxmox VE</h1>
+    </header>
+    <nav>
+        <ul>
+            <li>
+                Configuración de Proxmox VE
+                <ul>
+                    <li>¿Que necesitamos para instalar el Proxmox?</li>
+                    <li>¿Como creamos un USB booteable?</li>
+                    <li>Instalacion en Windows:</li>
+                    <li>Configurar MicroServidor para instalacion:</li>
+                </ul>
+            </li>
+            <li>
+                Instalación de Proxmox VE
+                <ul>
+                    <li>Como instalar Proxmox:</li>
+                    <li>Como acceder a Proxmox:</li>
+                </ul>
+            </li>
+            <li>
+                Instalación de Contendor LXC
+                <ul>
+                    <li>Como crear un contenerdor:</li>
+                    <li>Como iniciar contenedor:</li>
+                    <li>Como instalar apache y git en el contenedor:</li>
+                    <li>Como usar Apache y git conjuntamente:</li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <section><iframe src="http://www.click2music.es/edurne/edurne.html" width="500" height="500" align="center"></section>
 </body>
+
 </html>
