--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
             </li>
         </ul>
     </nav>
-    <section><iframe src="https://pve.proxmox.com/wiki/Main_Page" width="auto" height="auto"></section>
+    <section><iframe src="https://pve.proxmox.com/wiki/Main_Page" width="100%" height="100%"></section>
 </body>
 
 </html>
