--- a/web/index.html
+++ b/web/index.html
@@ -19,31 +19,35 @@
             <li>
                 Configuración de Proxmox VE
                 <ul>
-                    <li>¿Que necesitamos para instalar el Proxmox?</li>
-                    <li>¿Como creamos un USB booteable?</li>
-                    <li>Instalacion en Windows:</li>
-                    <li>Configurar MicroServidor para instalacion:</li>
+                    <li><a href="url">¿Que necesitamos para instalar el Proxmox?</a></li>
+                    <li><a href="url">¿Como creamos un USB booteable?</a></li>
+                    <li><a href="url">Instalacion en Windows:</a></li>
+                    <li><a href="url">Configurar MicroServidor para instalacion:</a></li>
                 </ul>
             </li>
             <li>
                 Instalación de Proxmox VE
                 <ul>
-                    <li>Como instalar Proxmox:</li>
-                    <li>Como acceder a Proxmox:</li>
+                    <li><a href="url">Como instalar Proxmox:</a></li>
+                    <li><a href="url">Como acceder a Proxmox:</a></li>
                 </ul>
             </li>
             <li>
                 Instalación de Contendor LXC
                 <ul>
-                    <li>Como crear un contenerdor:</li>
-                    <li>Como iniciar contenedor:</li>
-                    <li>Como instalar apache y git en el contenedor:</li>
-                    <li>Como usar Apache y git conjuntamente:</li>
+                    <li><a href="url">Como crear un contenerdor:</a></li>
+                    <li><a href="url">Como iniciar contenedor:</a></li>
+                    <li><a href="url">Como instalar apache y git en el contenedor:</a></li>
+                    <li><a href="url">Como usar Apache y git conjuntamente:</a></li>
                 </ul>
             </li>
         </ul>
     </nav>
     <section><iframe src="https://pve.proxmox.com/wiki/Main_Page" width="100%" height="100%"></section>
 </body>
+<footer>
+	<img src="" alt="logoWP" height="32" width="32">
+	<h3>El rompecabezas de Proxmox VE - Asier, Victor, Vanesa y Jon Andoni.</h1>
+</footer>
 
 </html>
