--- a/web/index.html
+++ b/web/index.html
@@ -2,52 +2,53 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>El rompecabezas de Proxmox VE</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>El rompecabezas de Proxmox VE</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 </head>
 
 <body>
-    <header>
-        <img src="" alt="logoWP" height="42" width="42">
-        <h1>El rompecabezas de Proxmox VE</h1>
-    </header>
-    <nav>
-        <ul>
-            <li>
-                Configuración de Proxmox VE
-                <ul>
-                    <li><a href="url">¿Que necesitamos para instalar el Proxmox?</a></li>
-                    <li><a href="url">¿Como creamos un USB booteable?</a></li>
-                    <li><a href="url">Instalacion en Windows:</a></li>
-                    <li><a href="url">Configurar MicroServidor para instalacion:</a></li>
-                </ul>
-            </li>
-            <li>
-                Instalación de Proxmox VE
-                <ul>
-                    <li><a href="url">Como instalar Proxmox:</a></li>
-                    <li><a href="url">Como acceder a Proxmox:</a></li>
-                </ul>
-            </li>
-            <li>
-                Instalación de Contendor LXC
-                <ul>
-                    <li><a href="url">Como crear un contenerdor:</a></li>
-                    <li><a href="url">Como iniciar contenedor:</a></li>
-                    <li><a href="url">Como instalar apache y git en el contenedor:</a></li>
-                    <li><a href="url">Como usar Apache y git conjuntamente:</a></li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
-    <section><iframe src="https://pve.proxmox.com/wiki/Main_Page" width="100%" height="100%"></section>
+	<header>
+		<img src="" alt="logoWP" height="42" width="42">
+		<h1>El rompecabezas de Proxmox VE</h1>
+	</header>
+	<nav>
+		<ul>
+			<li>
+				Configuración de Proxmox VE
+				<ul>
+					<li><a href="url">¿Que necesitamos para instalar el Proxmox?</a></li>
+					<li><a href="url">¿Como creamos un USB booteable?</a></li>
+					<li><a href="url">Instalacion en Windows:</a></li>
+					<li><a href="url">Configurar MicroServidor para instalacion:</a></li>
+				</ul>
+			</li>
+			<li>
+				Instalación de Proxmox VE
+				<ul>
+					<li><a href="url">Como instalar Proxmox:</a></li>
+					<li><a href="url">Como acceder a Proxmox:</a></li>
+				</ul>
+			</li>
+			<li>
+				Instalación de Contendor LXC
+				<ul>
+					<li><a href="url">Como crear un contenerdor:</a></li>
+					<li><a href="url">Como iniciar contenedor:</a></li>
+					<li><a href="url">Como instalar apache y git en el contenedor:</a></li>
+					<li><a href="url">Como usar Apache y git conjuntamente:</a></li>
+				</ul>
+			</li>
+		</ul>
+	</nav>
+	<section><iframe src="https://pve.proxmox.com/wiki/Main_Page" width="100%" height="100%"></iframe></section>
+	<footer>
+		<img src="" alt="logoWP" height="32" width="32">
+		<h3>El rompecabezas de Proxmox VE - Asier, Victor, Vanesa y Jon Andoni.</h3>
+	</footer>
 </body>
-<footer>
-	<img src="" alt="logoWP" height="32" width="32">
-	<h3>El rompecabezas de Proxmox VE - Asier, Victor, Vanesa y Jon Andoni.</h3>
-</footer>
+
 
 </html>
