--- a/web/index.html
+++ b/web/index.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-	<header>
+	<header id="cabecero">
 		<img src="" alt="logoWP" height="42" width="42">
-		<h1>El rompecabezas de Proxmox VE</h1>
+		<h1 id="titulo-cabecero">El rompecabezas de Proxmox VE</h1>
 	</header>
-	<nav>
-		<ul>
+	<nav id="navegador">
+		<ul id="lista">
 			<li>
 				Configuración de Proxmox VE
-				<ul>
+				<ul id="lista-1">
 					<li><a href="url">¿Que necesitamos para instalar el Proxmox?</a></li>
 					<li><a href="url">¿Como creamos un USB booteable?</a></li>
 					<li><a href="url">Instalacion en Windows:</a></li>
@@ -27,14 +27,14 @@
 			</li>
 			<li>
 				Instalación de Proxmox VE
-				<ul>
+				<ul id="lista-2">
 					<li><a href="url">Como instalar Proxmox:</a></li>
 					<li><a href="url">Como acceder a Proxmox:</a></li>
 				</ul>
 			</li>
 			<li>
 				Instalación de Contendor LXC
-				<ul>
+				<ul id="lista-3">
 					<li><a href="url">Como crear un contenerdor:</a></li>
 					<li><a href="url">Como iniciar contenedor:</a></li>
 					<li><a href="url">Como instalar apache y git en el contenedor:</a></li>
@@ -43,10 +43,10 @@
 			</li>
 		</ul>
 	</nav>
-	<section><iframe src="https://pve.proxmox.com/wiki/Main_Page" width="100%" height="100%"></iframe></section>
-	<footer>
+	<section id="seccion"><iframe src="https://pve.proxmox.com/wiki/Main_Page" width="100%" height="100%"></iframe></section>
+	<footer id="pie">
 		<img src="" alt="logoWP" height="32" width="32">
-		<h3>El rompecabezas de Proxmox VE - Asier, Victor, Vanesa y Jon Andoni.</h3>
+		<h3 id="titulo-pie">El rompecabezas de Proxmox VE - Asier, Victor, Vanesa y Jon Andoni.</h3>
 	</footer>
 </body>
 
