--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
 	<nav id="navegador">
 		<ul id="lista">
 			<li>
-				Configuración de Proxmox VE
+				<a href="CP.html">Configuración de Proxmox VE</a>
 				<ul id="lista-1">
 					<li><a href="url">¿Que necesitamos para instalar el Proxmox?</a></li>
 					<li><a href="url">¿Como creamos un USB booteable?</a></li>
@@ -28,14 +28,14 @@
 				</ul>
 			</li>
 			<li>
-				Instalación de Proxmox VE
+				<a href="IP.html">Instalación de Proxmox VE</a>
 				<ul id="lista-2">
 					<li><a href="url">Como instalar Proxmox:</a></li>
 					<li><a href="url">Como acceder a Proxmox:</a></li>
 				</ul>
 			</li>
 			<li>
-				Instalación de Contendor LXC
+				<a href="IC.html">Instalación de Contendor LXC</a>
 				<ul id="lista-3">
 					<li><a href="url">Como crear un contenerdor:</a></li>
 					<li><a href="url">Como iniciar contenedor:</a></li>
