--- a/web/IP.html
+++ b/web/IP.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilo2.css" />
 </head>
+
 <body>
     <section>
-            Como instalar Proxmox
+        <article name="insProx">
+            <h3>Como instalar Proxmox</h3>
             Lo instalamos tal que cualquier sistema Linux:
             Escogemos el idioma, el teclado y la zona horaria
             Ponemos una contraseña y un email
             ponemos la configuracion de red, la IP y el Gateway.
             Reiniciamos y ya tendremos la instalacion hecha.
-
-            Como acceder a Proxmox:
-            Para acceder a Proxmox usamos la IP que pusimos en la configuración de red de Proxmox y la ponemos en el navagador junto con el puerto 8006 y https://.
+        </article>
+        <article name="accProx">
+            <h3>Como acceder a Proxmox:</h3>
+            Para acceder a Proxmox usamos la IP que pusimos en la configuración de red de Proxmox y la ponemos en el
+            navagador junto con el puerto 8006 y https://.
             La interfaz de Proxmox nos pedirá el nombre de usuario y contraseña y una vez introducido podremos acceder.
+        </article>
     </section>
 </body>
+
 </html>
