--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
 
 		<nav id="navegador">
 			<ul id="lista">
-				<li>
+			<li id="desplegable-1">
 					<a target="iframe_a" href='CP.html'>Configuración de Proxmox VE</a>
 					<ul id="lista-1">
 						<li><a target="iframe_a" href='./CP.html#necProx'>¿Que necesitamos para instalar el Proxmox?</a></li>
@@ -28,14 +28,14 @@
 						<li><a target="iframe_a" href='./CP.html#confServ'>Configurar MicroServidor para instalacion:</a></li>
 					</ul>
 				</li>
-				<li>
+			<li id="desplegable-2">
 					<a target="iframe_a" href='IP.html'>Instalación de Proxmox VE</a>
 					<ul id="lista-2">
 						<li><a target="iframe_a" href='IP.html#insProx'>Como instalar Proxmox:</a></li>
 						<li><a target="iframe_a" href='IP.html#accProx'>Como acceder a Proxmox:</a></li>
 					</ul>
 				</li>
-				<li>
+			<li id="desplegable-3">
 					<a target="iframe_a" href='IC.html'>Instalación de Contendor LXC</a>
 					<ul id="lista-3">
 						<li><a target="iframe_a" href='IC.html#creoCont'>Como crear un contenerdor:</a></li>
