--- a/web/IP.html
+++ b/web/IP.html
@@ -11,7 +11,8 @@
 
 <body>
     <section>
-        <article name="insProx">
+        <h1>Instalación de Proxmox VE</h1>
+        <article id="insProx">
             <h3>Como instalar Proxmox</h3>
             Lo instalamos tal que cualquier sistema Linux:
             Escogemos el idioma, el teclado y la zona horaria
@@ -19,7 +20,7 @@
             ponemos la configuracion de red, la IP y el Gateway.
             Reiniciamos y ya tendremos la instalacion hecha.
         </article>
-        <article name="accProx">
+        <article id="accProx">
             <h3>Como acceder a Proxmox:</h3>
             Para acceder a Proxmox usamos la IP que pusimos en la configuración de red de Proxmox y la ponemos en el
             navagador junto con el puerto 8006 y https://.
