--- a/web/index.html
+++ b/web/index.html
@@ -5,24 +5,14 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>El rompecabezas de Proxmox VE</title>
+	<link rel="logo icon" href="./imagenes/logo.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="css/estilo.css" />
-	<script>
-
-		function cambiarFrame(enlace) {
-			var iframe = document.getElementById('frame');
-			iframe.src = enlace;
-
-
-		}
-
-
-	</script>
 </head>
 
 <body>
 	<header id="cabecero">
-		<img src="" alt="logoWP" height="42" width="42">
+		<img src="./imagenes/logo.png" alt="logoWP" height="120" width="120">
 		<h1 id="titulo-cabecero">El rompecabezas de Proxmox VE</h1>
 	</header>
 	<section id="contenedor">
@@ -30,38 +20,38 @@
 		<nav id="navegador">
 			<ul id="lista">
 				<li>
-					<a onclick="cambiarFrame('CP.html')">Configuración de Proxmox VE</a>
+					<a target="iframe_a" href='CP.html'>Configuración de Proxmox VE</a>
 					<ul id="lista-1">
-						<li><a onclick="cambiarFrame('./CP.html#necProx')">¿Que necesitamos para instalar el Proxmox?</a></li>
-						<li><a onclick="cambiarFrame('./CP.html#creoUsb')">¿Como creamos un USB booteable?</a></li>
-						<li><a onclick="cambiarFrame('./CP.html#insWind')">Instalacion en Windows:</a></li>
-						<li><a onclick="cambiarFrame('./CP.html#confServ')">Configurar MicroServidor para instalacion:</a></li>
+						<li><a target="iframe_a" href='./CP.html#necProx'>¿Que necesitamos para instalar el Proxmox?</a></li>
+						<li><a target="iframe_a" href='CP.html#creoUsb'>¿Como creamos un USB booteable?</a></li>
+						<li><a target="iframe_a" href='./CP.html#insWind'>Instalacion en Windows:</a></li>
+						<li><a target="iframe_a" href='./CP.html#confServ'>Configurar MicroServidor para instalacion:</a></li>
 					</ul>
 				</li>
 				<li>
-					<a onclick="cambiarFrame('IP.html')">Instalación de Proxmox VE</a>
+					<a target="iframe_a" href='IP.html'>Instalación de Proxmox VE</a>
 					<ul id="lista-2">
-						<li><a onclick="cambiarFrame('IP.html#insProx')">Como instalar Proxmox:</a></li>
-						<li><a onclick="cambiarFrame('IP.html#accProx')">Como acceder a Proxmox:</a></li>
+						<li><a target="iframe_a" href='IP.html#insProx'>Como instalar Proxmox:</a></li>
+						<li><a target="iframe_a" href='IP.html#accProx'>Como acceder a Proxmox:</a></li>
 					</ul>
 				</li>
 				<li>
-					<a onclick="cambiarFrame('IC.html')">Instalación de Contendor LXC</a>
+					<a target="iframe_a" href='IC.html'>Instalación de Contendor LXC</a>
 					<ul id="lista-3">
-						<li><a onclick="cambiarFrame('IC.html#creoCont')">Como crear un contenerdor:</a></li>
-						<li><a onclick="cambiarFrame('IC.html#inicCont')">Como iniciar contenedor:</a></li>
-						<li><a onclick="cambiarFrame('IC.html#instApacheGit')">Como instalar apache y git en el contenedor:</a></li>
-						<li><a onclick="cambiarFrame('IC.html#usarApacheGit')">Como usar Apache y git conjuntamente:</a></li>
+						<li><a target="iframe_a" href='IC.html#creoCont'>Como crear un contenerdor:</a></li>
+						<li><a target="iframe_a" href='IC.html#inicCont'>Como iniciar contenedor:</a></li>
+						<li><a target="iframe_a" href='IC.html#instApacheGit'>Como instalar apache y git en el contenedor:</a></li>
+						<li><a target="iframe_a" href='IC.html#usarApacheGit'>Como usar Apache y git conjuntamente:</a></li>
 					</ul>
 				</li>
 			</ul>
 		</nav>
 		<article id="articulo">
-			<iframe id="frame" src="https://pve.proxmox.com/wiki/Main_Page" width="100%" height="100%"></iframe>
+			<iframe id="frame" src="https://pve.proxmox.com/wiki/Main_Page" width="100%" height="100%" name="iframe_a"></iframe>
 		</article>
 	</section>
 	<footer id="pie">
-		<img src="" alt="logoWP" height="32" width="32">
+		<img src="./imagenes/logo.png" alt="logoWP" height="80" width="80">
 		<h3 id="titulo-pie">El rompecabezas de Proxmox VE - Asier, Victor, Vanesa y Jon Andoni.</h3>
 	</footer>
 </body>
