--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
 					<ul id="lista-1">
 						<li><a target="iframe_a" href='./CP.html#necProx'>¿Que necesitamos para instalar el Proxmox?</a></li>
 						<li><a target="iframe_a" href='CP.html#creoUsb'>¿Como creamos un USB booteable?</a></li>
-						<li><a target="iframe_a" href='./CP.html#insWind'>Instalacion en Windows:</a></li>
+						<li><a target="iframe_a" href='./CP.html#instalacion'>Instalacion en S.O.:</a></li>
 						<li><a target="iframe_a" href='./CP.html#confServ'>Configurar MicroServidor para instalacion:</a></li>
 					</ul>
 				</li>
