--- a/web/IP.html
+++ b/web/IP.html
@@ -15,15 +15,18 @@
         <article id="insProx">
             <h3>Como instalar Proxmox</h3>
             Lo instalamos tal que cualquier sistema Linux:
+            <img src="./imagenes/ip.png" alt="insProxmox" height="120" width="140">
             Escogemos el idioma, el teclado y la zona horaria
             Ponemos una contraseña y un email
             ponemos la configuracion de red, la IP y el Gateway.
+            <img src="./imagenes/redProxmox.png" alt="redProxmox" height="120" width="140">
             Reiniciamos y ya tendremos la instalacion hecha.
         </article>
         <article id="accProx">
             <h3>Como acceder a Proxmox:</h3>
             Para acceder a Proxmox usamos la IP que pusimos en la configuración de red de Proxmox y la ponemos en el
             navagador junto con el puerto 8006 y https://.
+            <img src="./imagenes/redProxmox.png" alt="redProxmox" height="120" width="140">
             La interfaz de Proxmox nos pedirá el nombre de usuario y contraseña y una vez introducido podremos acceder.
         </article>
     </section>
