--- a/web/IP.html
+++ b/web/IP.html
@@ -26,7 +26,7 @@
             <h3>Como acceder a Proxmox:</h3>
             Para acceder a Proxmox usamos la IP que pusimos en la configuración de red de Proxmox y la ponemos en el
             navagador junto con el puerto 8006 y https://.
-            <img src="./imagenes/redProxmox.png" alt="redProxmox" height="120" width="140">
+            <img src="./imagenes/inicio.png" alt="redProxmox" height="120" width="140">
             La interfaz de Proxmox nos pedirá el nombre de usuario y contraseña y una vez introducido podremos acceder.
         </article>
     </section>
