--- a/web/IP.html
+++ b/web/IP.html
@@ -14,20 +14,21 @@
         <h1>Instalación de Proxmox VE</h1>
         <article id="insProx">
             <h3>Como instalar Proxmox</h3>
-            Lo instalamos tal que cualquier sistema Linux:
+            <p>Lo instalamos tal que cualquier sistema Linux:</p>
             <img src="./imagenes/ip.png" alt="insProxmox" height="120" width="140">
-            Escogemos el idioma, el teclado y la zona horaria
-            Ponemos una contraseña y un email
-            ponemos la configuracion de red, la IP y el Gateway.
+            <p>Escogemos el idioma, el teclado y la zona horaria
+                Ponemos una contraseña y un email
+                ponemos la configuracion de red, la IP y el Gateway.</p>
             <img src="./imagenes/redProxmox.png" alt="redProxmox" height="120" width="140">
-            Reiniciamos y ya tendremos la instalacion hecha.
+            <p>Reiniciamos y ya tendremos la instalacion hecha.</p>
         </article>
         <article id="accProx">
             <h3>Como acceder a Proxmox:</h3>
-            Para acceder a Proxmox usamos la IP que pusimos en la configuración de red de Proxmox y la ponemos en el
-            navagador junto con el puerto 8006 y https://.
+            <p>Para acceder a Proxmox usamos la IP que pusimos en la configuración de red de Proxmox y la ponemos en el
+                navagador junto con el puerto 8006 y https://.</p>
             <img src="./imagenes/inicio.png" alt="redProxmox" height="120" width="140">
-            La interfaz de Proxmox nos pedirá el nombre de usuario y contraseña y una vez introducido podremos acceder.
+            <p>La interfaz de Proxmox nos pedirá el nombre de usuario y contraseña y una vez introducido podremos
+                acceder.</p>
         </article>
     </section>
 </body>
